Java Marine API release notes
Version @VERSION@ (b@BUILD_ID@)
<http://marineapi.sourceforge.net/>
Copyright (C) 2010-@YEAR@ Kimmo Tuukkanen <ktuukkan@users.sourceforge.net>

This is a pre-alpha preview release. Major API changes may be introduced in
future versions. Released on @RELEASE_DATE@.

CHANGES

* Renamed GpsMode enum to FaaMode

* SentenceValidator; separated sentence format validation and checksum checking
  in different methods by adding isSentence(String) method.

NEW FEATURES

* Support for HDG, HDM and HDT sentences; the vessel's magnetic/true heading
  and magnetic variation/deviation.
  
* HeadingSentence interface for sentences that provide heading.

* Support for MWV sentences; wind speed and angle.
 
KNOWN ISSUES
  
 * Position.distanceTo() may not produce correct results.
 
 * Currently it is not possible to instantiate parsers without sentence data.
 