@@ -13,6 +13,8 @@ CHANGES
 * SentenceValidator; separated sentence format validation and checksum checking
   in different methods by adding isSentence(String) method.
 
+* All degrees values are set with SentenceParser.setDegreesValue() method.
+
 NEW FEATURES
 
 * Support for HDG, HDM and HDT sentences; the vessel's magnetic/true heading
@@ -21,7 +23,10 @@ NEW FEATURES
 * HeadingSentence interface for sentences that provide heading.
 
 * Support for MWV sentences; wind speed and angle.
- 
+
+* SentenceParser; setDegreesValue() for bearing, course etc, validates the value
+  to be within the range of 0..360 degrees.
+  
 KNOWN ISSUES
   
  * Position.distanceTo() may not produce correct results.
